--- a/login/user_test.html
+++ b/login/user_test.html
@@ -76,7 +76,7 @@
 				data = new Function('','return'+ data)();
 				
 				if(data.error == 0){
-					alert('恭喜你加入魔法的世界!');
+					alert('恭喜你加入魔法的世界~~~');
 					
 					setTimeout(function(){
 						location.href = 'ajax_error.php';
